# cel-java

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  cel_android_library.bzl  extensions.bzl  inspect.bzl  java_lite_proto_cel_library.bzl  java_lite_proto_cel_library_impl.bzl  maven_install.json  repositories.bzl  settings.gradle.kts
.github/workflows/: unwanted_deps.sh  workflow.yml
bundle/src/main/java/dev/cel/bundle/: BUILD.bazel  CelFactory.java  CelImpl.java
bundle/src/test/java/dev/cel/bundle/: BUILD.bazel  CelImplTest.java
checker/src/main/java/dev/cel/checker/: BUILD.bazel  CelCheckerLegacyImpl.java  CelStandardDeclarations.java  ExprChecker.java
checker/src/test/java/dev/cel/checker/: BUILD.bazel
codelab/src/main/codelab/: BUILD.bazel
codelab/src/main/codelab/solutions/: BUILD.bazel
codelab/src/test/codelab/: BUILD.bazel
codelab/src/test/codelab/solutions/: BUILD.bazel
common/: BUILD.bazel  build.gradle.kts
common/exceptions/: BUILD.bazel
common/src/main/java/dev/cel/common/: AttributeNotFoundException.java  BUILD.bazel  CelFunctionDecl.java  CelMutableSource.java  CelRuntimeException.java  CelSource.java  CelSourceHelper.java  Source.java
common/src/main/java/dev/cel/common/annotations/: BUILD.bazel
common/src/main/java/dev/cel/common/ast/: BUILD.bazel  CelConstant.java  CelExpr.java
common/src/main/java/dev/cel/common/exceptions/: BUILD.bazel  CelDuplicateKeyException.java  CelIterationLimitExceededException.java  CelOverloadNotFoundException.java
common/src/main/java/dev/cel/common/internal/: BUILD.bazel
common/src/main/java/dev/cel/common/navigation/: CelNavigableExpr.java  CelNavigableExprVisitor.java  ExprHeightCalculator.java
common/src/main/java/dev/cel/common/types/: BUILD.bazel  CelType.java  CelTypeProvider.java  DefaultTypeProvider.java  ProtoMessageLiteTypeProvider.java  StructType.java  StructTypeReference.java
common/src/main/java/dev/cel/common/values/: BUILD.bazel  BaseProtoCelValueConverter.java  BaseProtoMessageValueProvider.java  CelValueConverter.java  CelValueProvider.java  ProtoCelValueConverter.java  ProtoLiteCelValueConverter.java  ProtoMessageValue.java
common/src/test/java/dev/cel/common/: BUILD.bazel
common/src/test/java/dev/cel/common/internal/: BUILD.bazel
common/src/test/resources/: BUILD.bazel
common/types/: BUILD.bazel
compiler/src/main/java/dev/cel/compiler/: BUILD.bazel  CelCompilerFactory.java  CelCompilerImpl.java
extensions/src/main/java/dev/cel/extensions/: BUILD.bazel  CelComprehensionsExtensions.java  CelOptionalLibrary.java
extensions/src/test/java/dev/cel/extensions/: CelBlockExtensionsTest.java
gradle/: libs.versions.toml
optimizer/src/main/java/dev/cel/optimizer/: AstMutator.java  BUILD.bazel  CelAstOptimizer.java  CelOptimizerFactory.java  CelOptimizerImpl.java  MutableAst.java  MutableExprVisitor.java
optimizer/src/main/java/dev/cel/optimizer/optimizers/: BUILD.bazel  (+1 more)
optimizer/src/test/java/dev/cel/optimizer/: MutableAstTest.java
parser/: build.gradle.kts
parser/src/main/java/dev/cel/parser/: BUILD.bazel
policy/src/main/java/dev/cel/policy/: BUILD.bazel  CelCompiledRule.java  CelPolicy.java  CelPolicyCompiler.java  CelPolicyCompilerBuilder.java  CelPolicyCompilerImpl.java  CelPolicySource.java  CelPolicyYamlConfigParser.java  RuleComposer.java  YamlParserContextImpl.java
policy/src/test/java/dev/cel/policy/: BUILD.bazel  CelPolicyCompilerImplTest.java  PolicyTestHelper.java
policy/src/test/resources/compose_errors/: config.yaml  expected_errors.baseline  policy.yaml
policy/src/test/resources/compose_errors_conflicting_output/: expected_errors.baseline  policy.yaml
policy/src/test/resources/compose_errors_conflicting_subrule/: expected_errors.baseline  policy.yaml
protobuf/src/main/java/dev/cel/protobuf/: CelLiteDescriptorGenerator.java  JavaFileGenerator.java  ProtoDescriptorCollector.java
publish/: BUILD.bazel  cel_version.bzl  pom_template.xml  publish.sh
runtime/: BUILD.bazel  build.gradle.kts
runtime/src/main/java/dev/cel/runtime/: BUILD.bazel  CelEvaluationExceptionBuilder.java  CelFunctionBinding.java  CelFunctionResolver.java  CelLateFunctionBindings.java  CelLiteRuntimeBuilder.java  CelResolvedOverload.java  CelRuntime.java  CelRuntimeBuilder.java  CelRuntimeFactory.java  CelRuntimeImpl.java  CelRuntimeLegacyImpl.java  CelStandardFunctions.java  CelValueRuntimeTypeProvider.java  ConcatenatedListView.java  DebugStandardFunctions.java  DefaultDispatcher.java  DefaultInterpreter.java  DescriptorTypeResolver.java  FunctionBindingImpl.java  FunctionOverload.java  LiteDescriptorTypeResolver.java  LiteProgramImpl.java  LiteRuntimeImpl.java  MutableComprehensionMap.java  PartialActivation.java  Program.java  ProgramImpl.java  RuntimeHelpers.java  TypeResolver.java
runtime/src/main/java/dev/cel/runtime/async/: BUILD.bazel
runtime/src/main/java/dev/cel/runtime/planner/: Attribute.java  AttributeFactory.java  BUILD.bazel  ErrorMetadata.java  EvalAttribute.java  EvalConstant.java  EvalCreateList.java  EvalCreateMap.java  EvalCreateStruct.java  EvalFold.java  EvalHelpers.java  EvalLateBoundCall.java  EvalPresenceTest.java  EvalUnary.java  EvalVarArgsCall.java  EvalZeroArity.java  ExecutionFrame.java  InterpretableAttribute.java  LocalizedEvaluationException.java  MaybeAttribute.java  MissingAttribute.java  NamespacedAttribute.java  PlannedInterpretable.java  PlannedProgram.java  PresenceTestQualifier.java  ProgramPlanner.java  Qualifier.java  RelativeAttribute.java  StrictErrorException.java
runtime/src/main/java/dev/cel/runtime/standard/: BUILD.bazel  CelStandardFunction.java  TypeFunction.java
runtime/src/test/java/dev/cel/runtime/: BUILD.bazel  CelLiteRuntimeAndroidTest.java  CelLiteRuntimeTest.java  CelRuntimeTest.java  PlannerInterpreterTest.java
runtime/standard/: BUILD.bazel
test/: BUILD.bazel
testing/: build.gradle.kts
testing/src/main/java/dev/cel/testing/: BaseInterpreterTest.java  BaselineTestCase.java
testing/src/test/java/dev/cel/testing/: BUILD.bazel
validator/src/main/java/dev/cel/validator/: BUILD.bazel
(+13 files in other folders)
