load("@bazel_common//tools/maven:pom_file.bzl", "pom_file")
load("@rules_jvm_external//:defs.bzl", "java_export")
load("//publish:cel_version.bzl", "CEL_VERSION")

# Note: These targets must reference the build targets in `src` directly in
# order to properly generate the maven dependencies in pom.xml.

COMMON_TARGETS = [
    "//common/src/main/java/dev/cel/common",
    "//common/src/main/java/dev/cel/common:compiler_common",
    "//common/src/main/java/dev/cel/common:options",
    "//common/src/main/java/dev/cel/common:proto_ast",
    "//common/src/main/java/dev/cel/common:error_codes",
    "//common/src/main/java/dev/cel/common:runtime_exception",
    "//common/src/main/java/dev/cel/common:mutable_ast",
    "//common/src/main/java/dev/cel/common:mutable_source",
    "//common/src/main/java/dev/cel/common:proto_json_adapter",
    "//common/src/main/java/dev/cel/common:source_location",
    "//common/src/main/java/dev/cel/common:source",
    "//common/src/main/java/dev/cel/common/annotations",
    "//common/src/main/java/dev/cel/common/ast",
    "//common/src/main/java/dev/cel/common/ast:expr_converter",
    "//common/src/main/java/dev/cel/common/ast:expr_factory",
#    "//common/src/main/java/dev/cel/common/ast:expr_util",
    "//common/src/main/java/dev/cel/common/ast:mutable_expr",
     "//common/src/main/java/dev/cel/common/internal",
     "//common/src/main/java/dev/cel/common/internal:comparison_functions",
     "//common/src/main/java/dev/cel/common/internal:converter",
     "//common/src/main/java/dev/cel/common/internal:dynamic_proto",
     "//common/src/main/java/dev/cel/common/internal:proto_equality",
     "//common/src/main/java/dev/cel/common/internal:file_descriptor_converter",
     "//common/src/main/java/dev/cel/common/internal:errors",
     "//common/src/main/java/dev/cel/common/internal:env_visitor",
     "//common/src/main/java/dev/cel/common/internal:default_instance_message_factory",
     "//common/src/main/java/dev/cel/common/internal:well_known_proto",
     "//common/src/main/java/dev/cel/common/internal:proto_message_factory",
     "//common/src/main/java/dev/cel/common/internal:default_message_factory",
     "//common/src/main/java/dev/cel/common/internal:cel_descriptor_pools",
     "//common/src/main/java/dev/cel/common/internal:safe_string_formatter",
     "//common/src/main/java/dev/cel/common/types",
     "//common/src/main/java/dev/cel/common/types:cel_types",
     "//common/src/main/java/dev/cel/common/types:type_providers",
     "//common/src/main/java/dev/cel/common/values",
     "//common/src/main/java/dev/cel/common/values:cel_value",
     "//common/src/main/java/dev/cel/common/values:cel_value_provider",
     "//common/src/main/java/dev/cel/common/values:cel_byte_string",
     "//common/src/main/java/dev/cel/common/values:proto_message_value",
     "//common/src/main/java/dev/cel/common/values:proto_message_value_provider"
]

RUNTIME_TARGETS = [
    "//runtime/src/main/java/dev/cel/runtime",
    "//runtime/src/main/java/dev/cel/runtime:base",
    "//runtime/src/main/java/dev/cel/runtime:interpreter",
    "//runtime/src/main/java/dev/cel/runtime:runtime_helper",
    "//runtime/src/main/java/dev/cel/runtime:unknown_attributes",
]

COMPILER_TARGETS = [
    "//parser/src/main/java/dev/cel/parser",
    "//parser/src/main/java/dev/cel/parser:parser_builder",
    "//parser/src/main/java/dev/cel/parser:unparser",
    "//checker/src/main/java/dev/cel/checker:checker",
    "//checker/src/main/java/dev/cel/checker:checker_builder",
    "//checker/src/main/java/dev/cel/checker:proto_type_mask",
    "//checker/src/main/java/dev/cel/checker:proto_expr_visitor",
    "//compiler/src/main/java/dev/cel/compiler",
    "//compiler/src/main/java/dev/cel/compiler:compiler_builder",
]

VALIDATOR_TARGETS = [
    "//validator/src/main/java/dev/cel/validator",
    "//validator/src/main/java/dev/cel/validator:validator_builder",
    "//validator/src/main/java/dev/cel/validator:ast_validator",
    "//validator/src/main/java/dev/cel/validator:validator_impl",
    "//validator/src/main/java/dev/cel/validator/validators:timestamp",
    "//validator/src/main/java/dev/cel/validator/validators:duration",
    "//validator/src/main/java/dev/cel/validator/validators:regex",
    "//validator/src/main/java/dev/cel/validator/validators:homogeneous_literal",
]

OPTIMIZER_TARGETS = [
    "//optimizer/src/main/java/dev/cel/optimizer",
    "//optimizer/src/main/java/dev/cel/optimizer:optimizer_builder",
    "//optimizer/src/main/java/dev/cel/optimizer:ast_optimizer",
    "//optimizer/src/main/java/dev/cel/optimizer:optimization_exception",
    "//optimizer/src/main/java/dev/cel/optimizer:mutable_ast",
    "//optimizer/src/main/java/dev/cel/optimizer:optimizer_impl",
    "//optimizer/src/main/java/dev/cel/optimizer/optimizers:constant_folding",
    "//optimizer/src/main/java/dev/cel/optimizer/optimizers:common_subexpression_elimination",
]

V1ALPHA1_UTILITY_TARGETS = [
    "//common/src/main/java/dev/cel/common:proto_v1alpha1_ast",
]

EXTENSION_TARGETS = [
    "//extensions/src/main/java/dev/cel/extensions",
    "//extensions/src/main/java/dev/cel/extensions:optional_library",
]

ALL_TARGETS = [
    "//bundle/src/main/java/dev/cel/bundle:cel",
] + RUNTIME_TARGETS + COMPILER_TARGETS + EXTENSION_TARGETS + V1ALPHA1_UTILITY_TARGETS + OPTIMIZER_TARGETS + VALIDATOR_TARGETS

pom_file(
    name = "cel_common_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "common",
        "PACKAGE_NAME": "CEL Java Common",
        "PACKAGE_DESC": "Common Expression Language for Java. This includes the common dependencies required to leverage CEL.",
    },
    targets = COMMON_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel_common",
    deploy_env = [
        "@com_google_googleapis//google/api/expr/v1alpha1:expr_java_proto",
    ],
    maven_coordinates = "dev.cel:common:%s" % CEL_VERSION,
    pom_template = ":cel_common_pom",
    runtime_deps = COMMON_TARGETS,
)

pom_file(
    name = "cel_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "cel",
        "PACKAGE_NAME": "CEL Java",
        "PACKAGE_DESC": "Common Expression Language for Java. This include both the compilation and runtime packages.",
    },
    targets = ALL_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel",
    deploy_env = [
        "@com_google_googleapis//google/api/expr/v1alpha1:expr_java_proto",
    ],
    maven_coordinates = "dev.cel:cel:%s" % CEL_VERSION,
    pom_template = ":cel_pom",
    runtime_deps = ALL_TARGETS,
)

pom_file(
    name = "cel_compiler_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "compiler",
        "PACKAGE_NAME": "CEL Java Compiler",
        "PACKAGE_DESC": "Common Expression Language Compiler for Java",
    },
    targets = COMPILER_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel_compiler",
    deploy_env = [
        "@com_google_googleapis//google/api/expr/v1alpha1:expr_java_proto",
    ],
    maven_coordinates = "dev.cel:compiler:%s" % CEL_VERSION,
    pom_template = ":cel_compiler_pom",
    runtime_deps = COMPILER_TARGETS,
)

pom_file(
    name = "cel_runtime_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "runtime",
        "PACKAGE_NAME": "CEL Java Runtime",
        "PACKAGE_DESC": "Common Expression Language Runtime for Java",
    },
    targets = RUNTIME_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel_runtime",
    deploy_env = [
        "@com_google_googleapis//google/api/expr/v1alpha1:expr_java_proto",
    ],
    maven_coordinates = "dev.cel:runtime:%s" % CEL_VERSION,
    pom_template = ":cel_runtime_pom",
    runtime_deps = RUNTIME_TARGETS,
)

pom_file(
    name = "cel_v1alpha1_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "v1alpha1",
        "PACKAGE_NAME": "CEL Java v1alpha1 Utility",
        "PACKAGE_DESC": "Common Expression Language Utility for supporting v1alpha1 protobuf definitions",
    },
    targets = V1ALPHA1_UTILITY_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel_v1alpha1",
    deploy_env = [
        "@com_google_googleapis//google/api/expr/v1alpha1:expr_java_proto",
    ],
    maven_coordinates = "dev.cel:v1alpha1:%s" % CEL_VERSION,
    pom_template = ":cel_v1alpha1_pom",
    runtime_deps = V1ALPHA1_UTILITY_TARGETS,
)
