load("//:inspect.bzl", "pom_file")


RUNTIME_TARGETS = [
    "//runtime/src/main/java/dev/cel/runtime",
    "//runtime/src/main/java/dev/cel/runtime:base",
    "//runtime/src/main/java/dev/cel/runtime:interpreter",
    "//runtime/src/main/java/dev/cel/runtime:runtime_helper",
    "//runtime/src/main/java/dev/cel/runtime:unknown_attributes",
]

COMPILER_TARGETS = [
    "//parser/src/main/java/dev/cel/parser",
    "//parser/src/main/java/dev/cel/parser:parser_builder",
    "//parser/src/main/java/dev/cel/parser:unparser",
    "//checker/src/main/java/dev/cel/checker:checker",
    "//checker/src/main/java/dev/cel/checker:checker_builder",
    "//checker/src/main/java/dev/cel/checker:proto_type_mask",
    "//checker/src/main/java/dev/cel/checker:proto_expr_visitor",
    "//compiler/src/main/java/dev/cel/compiler",
    "//compiler/src/main/java/dev/cel/compiler:compiler_builder",
]

VALIDATOR_TARGETS = [
    "//validator/src/main/java/dev/cel/validator",
    "//validator/src/main/java/dev/cel/validator:validator_builder",
    "//validator/src/main/java/dev/cel/validator:ast_validator",
    "//validator/src/main/java/dev/cel/validator:validator_impl",
    "//validator/src/main/java/dev/cel/validator/validators:timestamp",
    "//validator/src/main/java/dev/cel/validator/validators:duration",
    "//validator/src/main/java/dev/cel/validator/validators:regex",
    "//validator/src/main/java/dev/cel/validator/validators:homogeneous_literal",
]

OPTIMIZER_TARGETS = [
    "//optimizer/src/main/java/dev/cel/optimizer",
    "//optimizer/src/main/java/dev/cel/optimizer:optimizer_builder",
    "//optimizer/src/main/java/dev/cel/optimizer:ast_optimizer",
    "//optimizer/src/main/java/dev/cel/optimizer:optimization_exception",
    "//optimizer/src/main/java/dev/cel/optimizer:mutable_ast",
    "//optimizer/src/main/java/dev/cel/optimizer:optimizer_impl",
    "//optimizer/src/main/java/dev/cel/optimizer/optimizers:constant_folding",
    "//optimizer/src/main/java/dev/cel/optimizer/optimizers:common_subexpression_elimination",
]

V1ALPHA1_UTILITY_TARGETS = [
    "//common/src/main/java/dev/cel/common:proto_v1alpha1_ast",
]

EXTENSION_TARGETS = [
    "//extensions/src/main/java/dev/cel/extensions",
    "//extensions/src/main/java/dev/cel/extensions:optional_library",
]

ALL_TARGETS = [
    "//bundle/src/main/java/dev/cel/bundle:cel",
] + RUNTIME_TARGETS + COMPILER_TARGETS + EXTENSION_TARGETS + V1ALPHA1_UTILITY_TARGETS + OPTIMIZER_TARGETS + VALIDATOR_TARGETS

pom_file(
   name = "test",
   targets = ["//checker/src/main/java/dev/cel/checker:proto_type_mask"],
   template_file = "pom_template.xml",
)
