package(
    default_applicable_licenses = ["//:license"],
    default_visibility = [
        "//publish:__pkg__",
        "//runtime:__pkg__",
    ],
)

BASE_SOURCES = [
    "DefaultMetadata.java",
    "IncompleteData.java",
    "InterpreterException.java",
    "MessageProvider.java",
    "Metadata.java",
    "Registrar.java",
    "StandardFunctions.java",
    "StandardTypeResolver.java",
    "TypeResolver.java",
]

INTERPRETER_SOURCES = [
    "Activation.java",
    "CallArgumentChecker.java",
    "DefaultDispatcher.java",
    "DefaultInterpreter.java",
    "DescriptorMessageProvider.java",
    "Dispatcher.java",
    "DynamicMessageFactory.java",
    "GlobalResolver.java",
    "Interpretable.java",
    "Interpreter.java",
    "InterpreterUtil.java",
    "MessageFactory.java",
    "PartialMessage.java",
    "PartialMessageOrBuilder.java",
    "RuntimeTypeProvider.java",
    "RuntimeUnknownResolver.java",
    "UnknownTrackingInterpretable.java",
]

java_library(
    name = "base",
    srcs = BASE_SOURCES,
    tags = [
    ],
    deps = [
        ":runtime_helper",
        "//:auto_value",
        "//common",
        "//common:error_codes",
        "//common:options",
        "//common:runtime_exception",
        "//common/annotations",
        "//common/internal:comparison_functions",
        "//common/internal:default_message_factory",
        "//common/internal:dynamic_proto",
        "//common/internal:safe_string_formatter",
        "//common/types",
        "//common/types:type_providers",
        "@cel_spec//proto/cel/expr:expr_java_proto",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:com_google_re2j_re2j",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_library(
    name = "interpreter",
    srcs = INTERPRETER_SOURCES,
    deprecation = "Please use CEL-Java Fluent APIs //runtime:runtime instead",
    tags = [
    ],
    exports = [":base"],
    deps = [
        ":base",
        ":evaluation_listener",
        ":runtime_helper",
        ":unknown_attributes",
        "//:auto_value",
        "//common",
        "//common:error_codes",
        "//common:features",
        "//common:options",
        "//common:runtime_exception",
        "//common/annotations",
        "//common/ast",
        "//common/internal:cel_descriptor_pools",
        "//common/internal:default_message_factory",
        "//common/internal:dynamic_proto",
        "//common/internal:proto_message_factory",
        "//common/types:cel_types",
        "//common/types:type_providers",
        "@cel_spec//proto/cel/expr:expr_java_proto",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_library(
    name = "runtime_helper",
    srcs = [
        "RuntimeEquality.java",
        "RuntimeHelpers.java",
    ],
    tags = [
    ],
    # NOTE: do not grow this dependencies arbitrarily
    deps = [
        "//common:error_codes",
        "//common:options",
        "//common:runtime_exception",
        "//common/annotations",
        "//common/internal:comparison_functions",
        "//common/internal:converter",
        "//common/internal:dynamic_proto",
        "//common/internal:proto_equality",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_re2j_re2j",
        "@maven//:org_threeten_threeten_extra",
    ],
)

# keep sorted
RUNTIME_COMMON_SOURCES = [
    "CelEvaluationException.java",
    "CelFunctionOverload.java",
    "CelVariableResolver.java",
    "UnknownContext.java",
]

# keep sorted
RUNTIME_FACTORY_SOURCES = [
    "CelRuntimeFactory.java",
]

# keep sorted
RUNTIME_LEGACY_IMPL_SOURCES = [
    "CelRuntimeLegacyImpl.java",
]

# keep sorted
RUNTIME_SOURCES = [
    "CelRuntime.java",  # need to keep together with builder
    "CelRuntimeBuilder.java",  # need to keep together with lib
    "CelRuntimeLibrary.java",  # need to keep together with builder, runtime interface
]

java_library(
    name = "runtime",
    srcs = RUNTIME_SOURCES,
    tags = [
    ],
    deps = [
        ":evaluation_listener",
        ":interpreter",
        ":runtime_common",
        "//:auto_value",
        "//common",
        "//common:options",
        "//common/values:cel_value_provider",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_library(
    name = "runtime_common",
    srcs = RUNTIME_COMMON_SOURCES,
    tags = [
    ],
    deps = [
        ":interpreter",
        ":unknown_attributes",
        "//common",
        "//common:error_codes",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "runtime_factory",
    srcs = RUNTIME_FACTORY_SOURCES,
    tags = [
    ],
    deps = [
        ":runtime",
        ":runtime_legacy_impl",
        "//common:options",
    ],
)

java_library(
    name = "runtime_legacy_impl",
    srcs = RUNTIME_LEGACY_IMPL_SOURCES,
    tags = [
    ],
    deps = [
        ":interpreter",
        ":runtime",
        ":runtime_common",
        ":runtime_type_provider_legacy",
        "//common",
        "//common:options",
        "//common/annotations",
        "//common/internal:cel_descriptor_pools",
        "//common/internal:default_message_factory",
        "//common/internal:dynamic_proto",
        "//common/internal:proto_message_factory",
        "//common/types:cel_types",
        "//common/values:cel_value_provider",
        "//common/values:proto_message_value_provider",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_jspecify_jspecify",
    ],
)

# keep sorted
UNKNOWN_ATTRIBUTE_SOURCES = [
    "CelAttribute.java",
    "CelAttributePattern.java",
    "CelAttributeResolver.java",
    "CelUnknownSet.java",
]

# keep sorted
UNKNOWN_OPTIONS_SOURCES = [
    "CelAttributeParser.java",
]

java_library(
    name = "unknown_options",
    srcs = UNKNOWN_OPTIONS_SOURCES,
    tags = [
    ],
    deps = [
        ":unknown_attributes",
        "//common",
        "//common:compiler_common",
        "//parser",
        "//parser:operator",
        "//parser:parser_builder",
        "@cel_spec//proto/cel/expr:expr_java_proto",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "unknown_attributes",
    srcs = UNKNOWN_ATTRIBUTE_SOURCES,
    tags = [
    ],
    deps = [
        "//:auto_value",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_re2j_re2j",
    ],
)

java_library(
    name = "runtime_type_provider_legacy",
    srcs = ["RuntimeTypeProviderLegacyImpl.java"],
    deps = [
        ":unknown_attributes",
        "//common:error_codes",
        "//common:options",
        "//common:runtime_exception",
        "//common/annotations",
        "//common/internal:cel_descriptor_pools",
        "//common/internal:dynamic_proto",
        "//common/types",
        "//common/types:type_providers",
        "//common/values",
        "//common/values:cel_value",
        "//common/values:cel_value_provider",
        "//common/values:proto_message_value",
        "//runtime:interpreter",
        "@cel_spec//proto/cel/expr:expr_java_proto",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_library(
    name = "interpreter_util",
    srcs = ["InterpreterUtil.java"],
    tags = [
    ],
    deps = [
        ":base",
        "//common:error_codes",
        "//common/annotations",
        "@cel_spec//proto/cel/expr:expr_java_proto",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_library(
    name = "evaluation_listener",
    srcs = ["CelEvaluationListener.java"],
    tags = [
    ],
    deps = [
        "//common/ast",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
