load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = [
        "//runtime/planner:__pkg__",
    ],
)

java_library(
    name = "program_planner",
    srcs = ["ProgramPlanner.java"],
    tags = [
    ],
    deps = [
        ":attribute",
        ":eval_and",
        ":eval_attribute",
        ":eval_conditional",
        ":eval_const",
        ":eval_create_list",
        ":eval_create_map",
        ":eval_create_struct",
        ":error_metadata",
        ":eval_fold",
        ":eval_or",
        ":eval_presence_test",
        ":eval_unary",
        ":eval_var_args_call",
        ":eval_zero_arity",
        ":interpretable_attribute",
        ":planned_interpretable",
        ":planned_program",
        ":qualifier",
        "//:auto_value",
        "//common:cel_ast",
        "//common:container",
        "//common:operator",
        "//common/annotations",
        "//common/ast",
        "//common/types",
        "//common/types:type_providers",
        "//common/values",
        "//common/values:cel_value_provider",
        "//runtime:dispatcher",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_exception_builder",
        "//runtime:interpretable",
        "//runtime:program",
        "//runtime:resolved_overload",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "planned_program",
    srcs = ["PlannedProgram.java"],
    tags = [
    ],
    deps = [
        ":error_metadata",
        ":planned_interpretable",
        "//:auto_value",
        "//common:runtime_exception",
        "//common/values",
        "//runtime:activation",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_exception_builder",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "//runtime:program",
        "//runtime:variable_resolver",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "eval_const",
    srcs = ["EvalConstant.java"],
    deps = [
        ":planned_interpretable",
        "//common/values",
        "//common/values:cel_byte_string",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "interpretable_attribute",
    srcs = ["InterpretableAttribute.java"],
    deps = [
        ":qualifier",
        ":planned_interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "attribute",
    srcs = [
        "Attribute.java",
        "AttributeFactory.java",
        "MissingAttribute.java",
    ],
    deps = [
        "//:auto_value",
        ":eval_helpers",
        ":qualifier",
        ":planned_interpretable",
        "//runtime:interpretable",
        "//common:error_codes",
        "//common:runtime_exception",
        "//common:container",
        "//common/types",
        "//common/types:type_providers",
        "//common/values",
        "//common/values:cel_value",
        "//common:attribute_not_found_exception",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "qualifier",
    srcs = ["Qualifier.java"],
    deps = [
        "//common/values",
        "//common:error_codes",
        "//common:runtime_exception",
        "//common:attribute_not_found_exception",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "presence_test_qualifier",
    srcs = ["PresenceTestQualifier.java"],
    deps = [
        ":attribute",
        ":qualifier",
        "//common/values",
        "//common:error_codes",
        "//common:runtime_exception",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "eval_attribute",
    srcs = ["EvalAttribute.java"],
    deps = [
        ":attribute",
        ":interpretable_attribute",
        ":qualifier",
        "//runtime:interpretable",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        ":planned_interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_presence_test",
    srcs = ["EvalPresenceTest.java"],
    deps = [
        ":interpretable_attribute",
        "//runtime:interpretable",
        "//runtime:evaluation_exception",
        ":qualifier",
        ":presence_test_qualifier",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "eval_zero_arity",
    srcs = ["EvalZeroArity.java"],
    deps = [
        ":planned_interpretable",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "//runtime:resolved_overload",
    ],
)

java_library(
    name = "eval_unary",
    srcs = ["EvalUnary.java"],
    deps = [
        ":eval_helpers",
        ":planned_interpretable",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "//runtime:resolved_overload",
    ],
)

java_library(
    name = "eval_var_args_call",
    srcs = ["EvalVarArgsCall.java"],
    deps = [
        ":eval_helpers",
        ":planned_interpretable",
        "//runtime:interpretable",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:resolved_overload",
    ],
)

java_library(
    name = "eval_or",
    srcs = ["EvalOr.java"],
    deps = [
        ":eval_helpers",
        "//common/values",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        ":planned_interpretable",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_and",
    srcs = ["EvalAnd.java"],
    deps = [
        ":planned_interpretable",
        ":eval_helpers",
        "//common/values",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_conditional",
    srcs = ["EvalConditional.java"],
    deps = [
        ":planned_interpretable",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_create_struct",
    srcs = ["EvalCreateStruct.java"],
    deps = [
        ":planned_interpretable",
        "//common/types",
        "//common/values",
        "//common/values:cel_value_provider",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_create_list",
    srcs = ["EvalCreateList.java"],
    deps = [
        ":planned_interpretable",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_create_map",
    srcs = ["EvalCreateMap.java"],
    deps = [
        ":planned_interpretable",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "eval_fold",
    srcs = ["EvalFold.java"],
    deps = [
        ":planned_interpretable",
        "//common/values:cel_value",
        "//runtime:evaluation_exception",
        "//runtime:evaluation_listener",
        "//runtime:function_resolver",
        "//runtime:interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_library(
    name = "eval_helpers",
    srcs = ["EvalHelpers.java"],
    deps = [
        ":planned_interpretable",
        ":strict_error_exception",
        "//common:runtime_exception",
        "//common:error_codes",
        "//common/values",
        "//runtime:interpretable",
    ],
)

java_library(
    name = "strict_error_exception",
    srcs = ["StrictErrorException.java"],
    deps = [
        ":planned_interpretable",
        "//common:error_codes",
        "//common/values",
        "//common:runtime_exception",
        "//runtime:interpretable",
    ],
)


java_library(
    name = "error_metadata",
    srcs = ["ErrorMetadata.java"],
    deps = [
        "//runtime:metadata",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ]
)

java_library(
    name = "planned_interpretable",
    srcs = ["PlannedInterpretable.java"],
    deps = [
        "//runtime:interpretable",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ]
)
